Fix chat header growing too big

--- a/src/components/Chat/ChatHeader/styles.scss
+++ b/src/components/Chat/ChatHeader/styles.scss
@@ -10,6 +10,7 @@
   position: absolute;
   z-index: 2000;
   border-bottom: 1px solid $orange;
+  overflow: hidden;
 }
 
 .chat-header-item {
